--- a/client/assets/styles/scss/views/views.scss
+++ b/client/assets/styles/scss/views/views.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
-  height: 100%;
   overflow: hidden;
   position: relative;
   z-index: $z-views;
